fix: comment like & tour star